--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,23 @@
 
 <HTML>
 <HEAD>
-<TITLE>Ejemplo 3</TITLE>
+<TITLE>Calendario Presa  INDEX</TITLE>
 </HEAD>
 <BODY>
-<h1> hola desde el template {{ name }} euros {{ dato }}</h1>
+<h1> Pantalla Principal</h1>
+<form>
+        
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Turno </label>
+      <input type="" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+    </div>
+    <div class="mb-3">
+      <label for="" class="form-label">Año</label>
+      <input type="" class="form-control" id="exampleInputPassword1">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </BODY>
 </HTML>
