--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,6 @@
+{% extends 'base.html' %}
 
-<HTML>
-<HEAD>
-<TITLE>Calendario Presa  INDEX</TITLE>
-<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</HEAD>
-<BODY>
+{% block contenido %}
 
 <h1> Pantalla Principal</h1>
   <!--  Boton de Cambio de datos  -->
@@ -13,19 +8,26 @@
  -->
  <form action="{{ url_for('mes') }}" method="POST">
         
-  <div class="mb-1">
-    <label for="" class="form-label">Turno</label>
-    <input name="turno" type="" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-
+  <div class="mb-3 btn">
+    <select name="turno" class="form-select" aria-label="Default select example">
+      <option selected>Elige un Turno</option>
+      <option value="A">Tunro A</option>
+      <option value="B">Turno B</option>
+      <option value="C">Turno C</option>
+      <option value="D">Turno D</option>
+      <option value="E">Turno E</option>
+    </select>
   </div>
-  <div class="mb-3">
-    <label for="" class="form-label">Año</label>
-    <input name="year" type="" class="form-control" id="exampleInputPassword1">
+  
+  <div class="mb-3 btn">
+    <select name="year" class="form-select" aria-label="Default select example" >
+      <option selected>Elige un año</option>
+      {% for i in range(year,year+7): %}
+        <option value="{{ i }}"> {{ i }}</option>
+      {% endfor%}
+    </select>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
-</BODY>
-
-</HTML>
+{% endblock %}
