--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <div class="mb-3 btn">
     <select name="turno" class="form-select" aria-label="Default select example">
       <option selected>Elige un Turno</option>
-      <option value="A">Tunro A</option>
+      <option class="text-bg-danger" value="A">Tunro A</option>
       <option value="B">Turno B</option>
       <option value="C">Turno C</option>
       <option value="D">Turno D</option>
