5-10 colores dias trabajo

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
         
   <div class="mb-3 btn">
     <select name="turno" class="form-select" aria-label="Default select example">
+      <!-- Aqui se podria hacer un bucle for para los turnos con sus colores, dejando
+      TODO en una sola linea un option para todos... -->
       <option selected>Elige un Turno</option>
       <option class="text-bg-danger" value="A">Tunro A</option>
       <option value="B">Turno B</option>
