--- a/templates/calendarioMes.html
+++ b/templates/calendarioMes.html
@@ -2,44 +2,45 @@
 
 {% block contenido %}
 <!-- Prueba -->
-<h1 class="display-5 {{ colores[turno] }} text-center"> Calendario {{ year }} Turno {{ turno }} </h1>
-<!-- viejo -->
-<!--     <h1 class="display-5 
-        {% if turno=="A" %}
-            turnoA
-        {% elif turno=="B" %}
-            turnoB
-        {% elif turno=="C" %}
-        bg-danger .bg-gradient
-        {% elif turno=="D" %}
-            turnoD
-        {% else %}
-            turnoE    
-        {% endif %}
-    text-center"> Calendario {{ year }} Turno {{ turno }} </h1> -->
+<h1 class="display-5 {{ colores[turno] }} bg-gradient text-center"> Calendario {{ year }} Turno {{ turno }} </h1>
+
     <!-- Cabecera de color -->
-    <h1 class="display-7  text-center"> {{ calendario.meses[mes].nombre }}</h1>
+    <h1 class="display-5  text-center border-5"> {{ calendario.meses[mes].nombre }}</h1>
+    <div class="row row-cols-1 m-2 border-top border-5"></div>
+    <div class="row row-cols-7 m-2  m-lg-3"></div>
     <div class="container-sm text-center ">
         
         <!-- Cabecera Semana -->
-        <div class="row row-cols-7 text-bg-info">
+        <div class="row row-cols-7 text-black-50">
           <div class="col">L</div>
           <div class="col">M</div>
           <div class="col">X</div>
           <div class="col">J</div>
           <div class="col">V</div>
           <div class="col">S</div>
-          <div class="col">D</div>
+          <div class="col ">D</div>
         </div>
+        <div class="row row-cols-7 m-2 border-top"></div>
+        <div class="row row-cols-7 m-2  m-lg-3"></div>
         <!-- Dias -->
-       <div class="row row-cols-7"> 
+       <div class="row row-cols-7 "> 
             <!-- Huecos en blanco iniciales -->
-            {% for i in range(1,calendario.meses[mes].dias[1].numSemana-1) %}
-                <div class="col"> {{ " " }} </div>
+            
+            {% for i in range(1,calendario.meses[mes].dias[0].numSemana) %}
+                <div class="col pt-2 pb-2"> {{" "}} </div>
             {% endfor %}
 
             {% for dia in calendario.meses[mes].dias %}
-                <div class="col"> {{ dia.num  }} </div>
+<!--                 #TODO AQUI IRIAN LOS FESTIVOS TAMBIEN -->
+                {% if dia.festivo %}
+                    <div class="col text-bg-danger"> {{ dia.num }} </div>
+                {% else %}
+                    <div class="col {{ cd[dia.turno] }}"> {{ dia.num }} </div>
+                {% endif %}
+<!--                  {% if dia.festivo %}
+                {{"text-bg-danger"}}
+            {% endif %}  -->
+                
                 {% if dia.numSemana==7 %}
                     </div>
                     <div class="row row-cols-7"> 
