--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,14 @@
     <select name="turno" class="form-select" aria-label="Default select example">
       <!-- Aqui se podria hacer un bucle for para los turnos con sus colores, dejando
       TODO en una sola linea un option para todos... -->
+      <!-- {"A":"bg-success", "B":"bg-primary", "C":"bg-danger" ,"D":"bg-warning" ,"E":"bg-warning bg-opacity-50" } -->
+
       <option selected>Elige un Turno</option>
-      <option class="text-bg-danger" value="A">Tunro A</option>
-      <option value="B">Turno B</option>
-      <option value="C">Turno C</option>
-      <option value="D">Turno D</option>
-      <option value="E">Turno E</option>
+      <option class="text-bg-success" value="A">Tunro A</option>
+      <option class="text-bg-primary" value="B">Turno B</option>
+      <option class="text-bg-danger" value="C">Turno C</option>
+      <option class="text-bg-warning" value="D">Turno D</option>
+      <option class="text-bg-warning bg-opacity-50" value="E">Turno E</option>
     </select>
   </div>
   
