--- a/templates/calendarioYear.html
+++ b/templates/calendarioYear.html
@@ -6,71 +6,84 @@ para su modificación en anual       -->
 
 {% block contenido %}
 <!-- Cabeceras -->
-<div class=" container">
-    <h1 class="display-5 {{ colores[turno] }} bg-gradient text-center"> Calendario {{ year }} Turno {{ turno }} </h1>
-    Vista año mete
+<div class=" container ">
+    <a href="{{url_for('index')}}">
+    <button type="button" class="btn btn-outline-dark opacity-50 "> 
+        <img width="20" height="20" src="../static/images/ui-home.svg" alt="no encuentra"> 
+        <label  class="btn  opacity-50 "> 
+            <h7 class="display-7" >Volver</h7>
+        </label>
+    </button></a>
+    
+
+    <h1 class="display-5 {{ colores[turno] }} bg-gradient text-center"> 
+
+
+        Calendario {{ year }} Turno {{ turno }} 
+    </h1>
+    
 </div>
 
-<!--    Contenido de un mes -->
-<!-- #TODO hay que hacer 4 contenedores o filas y 3 columnas
-habria que poner un for para que ande con los meses... -->
 
 
-<div class="row row-cols-2  ">
-    por aqui iria el nombre del mes
-    <div class="row row-cols-7 bg-black  m-lg-3"></div>
-    <div class="container-sm text-center ">
-        <div class="border"></div>
-        <!-- Cabecera Semana -->
-        <div class="row row-cols-7 text-black-5 ">
-          <div class="col border-dark border-1 border">L</div>
-          <div class="col border-dark border-1 border">M</div>
-          <div class="col border-dark border-1 border">X</div>
-          <div class="col border-dark border-1 border">J</div>
-          <div class="col border-dark border-1 border">V</div>
-          <div class="col border-dark border-1 border">S</div>
-          <div class="col border-dark border-1 border">D</div>
-        </div>
-        <div class="row row-cols-7 m-2 border-top"></div>
-        <div class="row row-cols-7 m-2  m-lg-3"></div>
-        <!-- Dias -->
+
+{% for mes_ver in calendario.meses[1:] %}
+    <div class="row row-cols-2 text-center "> 
         
-       <div class="row row-cols-7 "> 
-            <!-- Huecos en blanco iniciales -->
+        <div class="row row-cols-7 bg-black  m-lg-3"></div>
+        <div class="container-sm text-center ">
+            <h3 class="  text-center  border-5"> {{ mes_ver.nombre }}</h3>
+            <div class="border bg-black"></div>
+            <!-- Cabecera Semana -->
+            <div class="row row-cols-7 text-black-5 ">
+                <div class="col border-dark border-1 border">L</div>
+                <div class="col border-dark border-1 border">M</div>
+                <div class="col border-dark border-1 border">X</div>
+                <div class="col border-dark border-1 border">J</div>
+                <div class="col border-dark border-1 border">V</div>
+                <div class="col border-dark border-1 border">S</div>
+                <div class="col border-dark border-1 border">D</div>
+            </div>
+            <div class="row row-cols-7 m-2 "></div>
             
-            {% for i in range(1,calendario.meses[mes].dias[0].numSemana) %}
-                <div class="col pt-2 pb-2 "> {{" "}} </div>
-            {% endfor %}
-
-            {% for dia in calendario.meses[mes].dias %}
-<!--                 # AQUI LOS FESTIVOS TAMBIEN -->
-                {% if dia.festivo %}
-                    <div class="col text-bg-danger "> {{ dia.num }} </div>
-                {% else %}
-                    <div class="col {{ cd[dia.turno] }}"> 
-                        <div class="col" > {{ dia.num }}</div>  </div>
-                {% endif %}
-<!--                  {% if dia.festivo %}
-                {{"text-bg-danger"}}
-            {% endif %}  -->
+            <!-- Dias -->
+            
+        <div class="row row-cols-7 "> 
                 
-                {% if dia.numSemana==7 %}
-                    </div>
-                    <div class="row row-cols-7"> 
-                {% endif %}                
-            {% endfor %}
-            <!-- Huecos en blanco finales -->
-            {% for i in range(calendario.meses[mes].dias[-1].numSemana,7) %}
-                <div class="col"> {{ " " }} </div>
-            {% endfor %}
-        </div>
-        <!-- fin dias -->
+            <!-- Huecos en blanco iniciales -->
+                {% for i in range(1,mes_ver.dias[0].numSemana) %}
+                    <div class="col pt-2 pb-2 "> {{" "}} </div>
+                {% endfor %}
 
-            
-        </div>
+                {% for dia in mes_ver.dias %}
+    <!--                 # AQUI LOS FESTIVOS TAMBIEN -->
+                    {% if dia.festivo %}
+                        <div class="col text-bg-danger "> {{ dia.num }} </div>
+                    {% else %}
+                        <div class="col {{ cd[dia.turno] }}"> 
+                            <div class="col" > {{ dia.num }}</div>  </div>
+                    {% endif %}
+                    <!-- si es final de semana cerramos un div y abrimos el siguiente -->
+                    {% if dia.numSemana==7 %}
+                        </div>
+                        <div class="row row-cols-7"> 
+                    {% endif %}                
+                {% endfor %}
+                <!-- Huecos en blanco finales -->
+                {% for i in range(mes_ver.dias[-1].numSemana,7) %}
+                    <div class="col"> {{ " " }} </div>
+                {% endfor %}
+            </div>
+            <!-- fin dias -->
 
-    </div>
-</div>
+                
+            </div>
+           
+    </div> 
+<!--     fIN Contenido de un mes --> 
+{% endfor %}
+<!--    Contenido de un mes --> 
+<div class="container m-5"> </div><div class="container m-5"> </div>
 {% endblock %}
 
 <!-- Contenido original en calendarioMes
