--- a/templates/macro.html
+++ b/templates/macro.html
@@ -1,21 +1,17 @@
-{% macro render_field() %}
+{% macro render_field(field) %}
+  <td> {{ field.label }} </td>
+  <dd> {{ field(**kwargs)|safe }}</dd>
 
-
-    <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Turno</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+  
+<!-- Ya no hay que validar errores, lo hace en el front los mismos forms -->
+   {% if field.errors %}
+    <ul>
+      {% for error in field.errors %}
+        <li> {{error}} </li>
+        
+      {% endfor %}
+    </ul>  
+   {% endif %}
+ <!-- Ya no hay que validar errores, lo hace en el front los mismos forms -->  
 
 {% endmacro %}
