--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,9 @@ Parte nueva-------------
   {% from 'macro.html' import render_field %}
   <form name="sendMessage" id="datosForm" method="POST">
     <div class="controls">
-      {{ render_field(form.year,class="form-control") }}
-      {{ render_field(form.turno,class="form-control") }}
+      {{ render_field(form.nombre,class="form-control") }}
+      {{ render_field(form.contra_usuario,class="form-control") }}
+      
     </div>
     <button type="submit" class="btn btn-primary">Enviar</button>
   </form>
