--- a/templates/alta.html
+++ b/templates/alta.html
@@ -13,7 +13,7 @@
     {{ render_field(form.contra_usuario,class="form-control") }}
     {{ render_field(form.turno,class="form-control") }}
     {{ render_field(form.correo,class="form-control") }}
-
+    {{ msj }}
   </div>
   <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
