11-10 Coreecion errores, integracion general

--- a/templates/calendarioYear.html
+++ b/templates/calendarioYear.html
@@ -14,10 +14,11 @@ para su modificación en anual       -->
             <h7 class="display-7" >Volver</h7>
         </label>
     </button></a>
-    
+    <h4 class="container align-items-lg-end"> Bienvenido: {{ usuario }}</h4>
+    <h5> {{ mOtro }}</h5>
 
     <h1 class="display-5 {{ colores[turno] }} bg-gradient text-center"> 
-
+        
 
         Calendario {{ year }} Turno {{ turno }} 
     </h1>
