--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
-Parte nueva-------------
+Usuario Registrado-------------
 
   {% from 'macro.html' import render_field %}
   <form name="sendMessage" id="datosForm" method="POST">
