--- a/templates/base.html
+++ b/templates/base.html
@@ -13,29 +13,88 @@
 
     <BODY>
         <!-- Barra de navegacion -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-brand bg-white">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">C.T. 1.0</a>
+              <a class="navbar-brand" href="#">Calendario Turnos 2.0</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{url_for('index')}}">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('iniciarSesion') }}">Iniciar Sesion</a>
-                  </li>
-                  <li class="nav-item align-items-lg-end">
-                    <a class="nav-link" href="{{ url_for('alta') }}">Registrarse</a>
-                  </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="{{url_for('index')}}">Inicio</a>
+                    </li>             
+                  {% if not session %}
+
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('login') }}">Iniciar Sesion</a>
+                    </li>
+
+                    {% if not session %}
+                      <li class="nav-item align-items-lg-end">
+                        <a class="nav-link" href="{{ url_for('alta') }}">Registrarse</a>
+                      </li>                      
+                    {% endif %}
+                  
+                  {% endif %}
+
+
+
+                  {% if session %}
+                    <li class="nav-item align-items-lg-end">
+                      <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesion</a>
+                    </li>       
+                  {% endif %} 
 
                 </ul>
               </div>
             </div>
           </nav>        
-        <!-- fin barra de navegacion -->
+        <!-- fin barra de navegacion Principal-->
+<!-- Barra de naveegación de turno y año -->
+
+        <!-- Barra de navegacion -->
+        {% if session %}
+          {% set colorturno=colores[turno] %}
+        {% else %}
+          {% set colorturno="navbar-dark bg-dark" %}
+        
+        {% endif %}
+        
+        <nav class="navbar navbar-expand-lg {{ colorturno }} d-flex">
+          <div class="container-fluid "> 
+         
+            <div class="collapse navbar-collapse m-2" id="navbarNavDropdown">
+              <ul class="navbar-nav ">
+                <li class="nav-item ">
+                  <h2 class=" p-md-3 text-white " href="#">Usuario: </h2>
+                </li>
+                <li class="nav-item col-7">
+                  <h2 class=" p-md-3 text-white" href="#">{{ nombre }}</h2>
+                </li>
+                {% if session %}
+                  <li class="nav-item col-6">
+                    <h2 class=" p-md-3 text-white" href="#">Año: {{ year }}</h2>
+                  </li>    
+                  <li class="nav-item col-6">
+                    <h2 class=" p-md-3 text-white" href="#">Turno: {{ turno }}</h2>
+                  </li>                    
+                {% endif %}
+                          
+
+<!--                 {% if session %}
+                  <li class="nav-item align-items-lg-end">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesion</a>
+                  </li>       
+                {% endif %}  -->
+
+              </ul>
+            </div>
+          </div>
+        </nav>        
+      <!-- fin barra de navegacion Turno y año-->
+
+
 {% block contenido %}
 
 
