15-10 Integración formulario calendario

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,52 +2,40 @@
 
 {% block contenido %}
 
-
+{% from 'macro.html' import render_field %}
 
 
  <!-- Este es el formulario viejo -->
 <form action="{{ url_for('anual') }}" method="POST">
  
-<div class="container ">
-  <h4 class="text-center p-md-4">Elige un turno y un año</h4> 
+  <div class="container ">
     
-  <div class="row"> 
-    <div class="col">
+    <h4 class="text-center p-md-4">Elige un turno y un año</h4> 
       
-      <span required>
-      <select required name="turno"  id="turno" class="form-select" aria-label="Default select example" required>
-        <option selected disabled>Elige un Turno</option>
-        <option class="text-bg-success" value="A">Tunro A</option>
-        <option class="text-bg-primary" value="B">Turno B</option>
-        <option class="text-bg-danger"  value="C">Turno C</option>
-        <option class="text-bg-warning" value="D">Turno D</option>
-        <option class="text-bg-warning bg-opacity-50" value="E">Turno E</option>
-      </span>
-      </select>      
-    </div>
-    <div class="col-5">
-      <form action="{{ url_for('anual') }}" method="POST">
-       
+    <div class="row-cols-8"> 
+      <div class="col-3">
+        
+        {{ render_field(formulario.turno,class="form-control form-select") }}
+        {{ render_field(formulario.year,class="form-control form-select") }}  
+      </div>
+      <div class="row-cols-5"> 
+        <div class="col-2"> 
+          <button type="submit"  class="btn btn-primary">Ver calendario</button>
+  <!--       <select required name="turno"  id="turno" class="form-select" aria-label="Default select example" required>
+          <option selected disabled>Elige un Turno</option>
+          <option class="text-bg-success" value="A">Tunro A</option>
+          <option class="text-bg-primary" value="B">Turno B</option>
+          <option class="text-bg-danger"  value="C">Turno C</option>
+          <option class="text-bg-warning" value="D">Turno D</option>
+          <option class="text-bg-warning bg-opacity-50" value="E">Turno E</option>
+  
+        </select>   -->    
+        </div>
+
 
         
-        
-        
-          <select name="year" class="form-select" aria-label="Default select example" >
-            <option selected>2022</option>
-
-            {% for i in range(year+1,year+7): %}
-
-              <option value="{{ i }}" > {{ i }}</option>
-            {% endfor%}
-          </select>
-       
-       
-      
-      </form>
-    </div>
-    <div class="col"> 
-      <button type="submit"  class="btn btn-primary">Ver calendario</button>
-      
+      </div>
     </div>
   </div>
+</form>
 {% endblock %}
