--- a/templates/calendarioYear.html
+++ b/templates/calendarioYear.html
@@ -27,41 +27,42 @@ para su modificación en anual       -->
         
 
         <div class="container-sm text-center ">
-            <h3 class="  text-center  border-5"> {{ mes_ver.nombre }}</h3>
+            <h3 class="  text-center  border-5 pt-5 pb-2"> {{ mes_ver.nombre }}</h3>
 
             <!-- Cabecera Semana -->
             <div class="row row-cols-7 text-black-5 ">
-                <div class="col border-dark border-1 border">L</div>
-                <div class="col border-dark border-1 border">M</div>
-                <div class="col border-dark border-1 border">X</div>
-                <div class="col border-dark border-1 border">J</div>
-                <div class="col border-dark border-1 border">V</div>
-                <div class="col border-dark border-1 border">S</div>
-                <div class="col border-dark border-1 border">D</div>
+                <div class="col-1 border-dark border-1 border">L</div>
+                <div class="col-1 border-dark border-1 border">M</div>
+                <div class="col-1 border-dark border-1 border">X</div>
+                <div class="col-1 border-dark border-1 border">J</div>
+                <div class="col-1 border-dark border-1 border">V</div>
+                <div class="col-1 border-dark border-1 border">S</div>
+                <div class="col-1 border-dark border-1 border">D</div>
             </div>
-            <div class="row row-cols-7 m-2 "></div>
+            <div class="row row-cols-7 m-3 "></div>
             
             <!-- Dias -->
             
-        <div class="row row-cols-7 "> 
+        <div class="row row-cols-5  "> 
                 
             <!-- Huecos en blanco iniciales -->
                 {% for i in range(1,mes_ver.dias[0].numSemana) %}
-                    <div class="col pt-2 pb-2 "> {{" "}} </div>
+                    <div class="col-1 pt-1 pb-3 p "> {{" "}} </div>
                 {% endfor %}
 
                 {% for dia in mes_ver.dias %}
     <!--                 # AQUI LOS FESTIVOS TAMBIEN -->
                     {% if dia.festivo %}
-                        <div class="col text-bg-danger "> {{ dia.num }} </div>
+                  
+                        <div class="col-1 text-bg-danger p-md-2 border-dark border-opacity-25 border-1 border-bottom-0 border"> {{ dia.num }} </div>
                     {% else %}
-                        <div class="col {{ cd[dia.turno] }}"> 
+                        <div class="col-1 {{ cd[dia.turno] }}  p-md-2 order-dark border-opacity-25 border-1 border-bottom-0 border""> 
                             <div class=" col" > {{ dia.num }}</div>  </div>
                     {% endif %}
                     <!-- si es final de semana cerramos un div y abrimos el siguiente -->
                     {% if dia.numSemana==7 %}
                         </div>
-                        <div class="row row-cols-7"> 
+                        <div class="row row-cols-7 "> 
                     {% endif %}                
                 {% endfor %}
                 <!-- Huecos en blanco finales -->
