--- a/templates/altaUsuario.html
+++ b/templates/altaUsuario.html
@@ -25,6 +25,28 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
               </form>
+              <div class="container text-center"> <!-- Mensajes flasheados de error de datos -->
+                {% with messages=get_flashed_messages()  %}
+              
+                  {% if messages %}
+                    {% for message in messages %}
+                    <div class="alert alert-danger" role="alert">
+                     {{ message }} 
+<!--                      <div class="container">
+                    
+                        <a class="nav-link active btn " href="{{url_for('index')}}">Inicio</a>
+                 
+                      <button>Iniciar sesión</button> -->
+                     </div>
+                    </div>
+
+                      
+                    {% endfor %}
+                    
+                  {% endif %}
+                  
+                {% endwith %}
+              </div>
         </div>
         <div class="col">
           
